--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,3 +1,6 @@
 {
-  "welcome_message": "مرحبًا بكم في Healthify!"
+  "welcome_message": "مرحبًا بكم في Healthify!",
+  "login": "تسجيل الدخول",
+  "register": "تسجيل",
+  "onboarding": "التمهيد"
 }
