--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,3 +1,6 @@
 {
-  "welcome_message": "Welcome to Healthify!"
+  "welcome_message": "Welcome to Healthify!",
+  "login": "Login",
+  "register": "Register",
+  "onboarding": "Onboarding"
 }
