- Finish login Ui and Logic - add AppUrls to save all urls in it - add remember me widget - add get User function in shared_pref_helper.dart to save all user data to use it anywhere

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -2,5 +2,12 @@
   "welcome_message": "مرحبًا بكم في Healthify!",
   "login": "تسجيل الدخول",
   "register": "تسجيل",
-  "onboarding": "التمهيد"
+  "onboarding": "التمهيد",
+  "logInToContinueYourHealthJourney": "تسجيل الدخول لمواصلة رحلتك الصحية",
+  "emailAddress": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "forgotPassword": "نسيت كلمه السر؟",
+  "dontHaveAnAccount": "لا تملك حساباً بعد؟ ",
+  "registerNow": "سجل الآن",
+  "rememberMe" : "تذكرني"
 }
