finished onboarding view

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,14 @@
 {
-  "welcome_message": "مرحبًا بكم في Healthify!",
+  "get_started": "ابدأ",
   "login": "تسجيل الدخول",
+  "next": "التالي",
+  "onboarding": "التمهيد",
+  "onboarding_subtitle_1": "سواء كنت تسعى لفقدان الوزن، أو تناول طعام أفضل، أو الحركة أكثر - نحن هنا لدعمك. خطط شخصية، مصممة لك.",
+  "onboarding_subtitle_2": "من عدد الخطوات، وسجلات الطعام، ومخططات الوزن إلى أهدافك وعاداتك، تابع كل شيء في مكان واحد. مصمم لإبقاء حماسك مستمراً.",
+  "onboarding_subtitle_3": "احصل على خطط وجبات، وحميات، ومدربين رقميين تتناسب مع أهدافك وعاداتك. تناول طعاماً أفضل. تحرك أكثر. مصمم للحياة الواقعية.",
+  "onboarding_title_1": "صحتك، طريقتك",
+  "onboarding_title_2": "شاهد تقدمك ينبض بالحياة",
+  "onboarding_title_3": "خطط أكثر ذكاءً. أنت أكثر صحخطط أذكى. أنت أكثر صحة.",
   "register": "تسجيل",
-  "onboarding": "التمهيد"
+  "welcome_message": "مرحبًا بكم في Healthify!"
 }
