feat: Add subscription feature with payment integration and localization updates
- Added subscription screen and related widgets for monthly and yearly plans.
- Implemented Kashier payment screen for handling payment processing.
- Introduced SubscriptionCubit and SubscriptionState for state management.
- Updated localization files for Arabic and English to include subscription-related strings.
- Refactored app theming and padding constants for better consistency.
- Changed button styles and colors for improved UI/UX.
- Integrated dotenv for secure handling of payment keys.
- Added new routes for subscription navigation.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,20 @@
 {
-  "welcome_message": "مرحبًا بكم في Healthify!",
+  "welcome_message": "مرحبًا بك في Healthify!",
   "login": "تسجيل الدخول",
-  "register": "تسجيل",
-  "onboarding": "التمهيد"
+  "register": "إنشاء حساب",
+  "onboarding": "الترحيب والإعداد",
+  "subscribe_to_premium": "اشترك في الباقة المميزة",
+  "annual": "سنوي",
+  "monthly": "شهري",
+  "billed_monthly": "يُحاسب شهريًا",
+  "billed_annually": "يُحاسب سنويًا",
+  "daily_followup_support": "متابعة يومية ودعم عبر واتساب أو داخل التطبيق.",
+  "daily_workout_plans": "خطط تمارين يومية مع النظام الغذائي.",
+  "personalized_diet_plan": "نظام غذائي مخصص بالكامل.",
+  "monthly_price": "{price} جنيه/شهر",
+  "annual_price": "{price} جنيه/سنة",
+  "annual_price_with_discount": "{price} جنيه بدلًا من {original_price}",
+  "monthly_price_with_discount": "{price} جنيه بدلًا من {original_price}",
+  "save_discount": "وفّر {discount}%",
+  "premium_plan": "الباقة المميزة"
 }
