create diets feature and main page of it

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,8 @@
 {
-  "welcome_message": "مرحبًا بكم في Healthify!",
+  "diets": "حميات غذائية",
   "login": "تسجيل الدخول",
+  "onboarding": "التمهيد",
+  "read_more": "اقرأ المزيد",
   "register": "تسجيل",
-  "onboarding": "التمهيد"
+  "welcome_message": "مرحبًا بكم في Healthify!"
 }
