--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,8 @@
   "forgotPassword": "Forgot Password?",
   "dontHaveAnAccount": "Don't have an account? ",
   "registerNow": "Register Now",
-  "rememberMe" : "Remember me"
+  "rememberMe" : "Remember me",
+  "nextTimeYouLogin": "Next time you login, you can use your fingerprint or face ID to access your account.",
+  "gotIt": "Got it",
+  "bioMetricAuthEnabled" : "Biometric Authentication Enabled"
 }
