-add verify code screen without link it with backend yet

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -6,11 +6,22 @@
   "logInToContinueYourHealthJourney": "تسجيل الدخول لمواصلة رحلتك الصحية",
   "emailAddress": "البريد الإلكتروني",
   "password": "كلمة المرور",
+  "confirmPassword": "Confirm password",
   "forgotPassword": "نسيت كلمه السر؟",
   "dontHaveAnAccount": "لا تملك حساباً بعد؟ ",
   "registerNow": "سجل الآن",
-  "rememberMe" : "تذكرني",
+  "rememberMe": "تذكرني",
   "gotIt": "تم",
   "nextTimeYouLogin": "في المرة القادمة التي تسجل فيها الدخول، يمكنك استخدام بصمة إصبعك أو وجهك للوصول إلى حسابك.",
-  "bioMetricAuthEnabled" : "تم تفعيل التسجيل بالبصمة"
+  "bioMetricAuthEnabled": "تم تفعيل التسجيل بالبصمة",
+  "joinHealthifyMe": "انضم إلى هيلثيفاي مي وابدأ رحلتك نحو حياة أكثر صحة.",
+  "lastName": "الاسم الاخير",
+  "firstName": "الاسم الاول",
+  "iAgreeToTerms" : "أوافق على شروط الخدمة و سياسة الخصوصية.",
+  "createAccount" : "إنشاء حساب",
+  "verify": "تحقق",
+  "didntGetTheEmail": "لم تتلقَ البريد الإلكتروني؟",
+  "resendCode": "إعادة إرسال الرمز",
+  "checkYourEmail": "تحقق من بريدك الإلكتروني",
+  "weSentAnEmail": "لقد أرسلنا لك بريدًا إلكترونيًا يحتوي على رمز التحقق، يرجى إدخال الرمز المكون من 5 أرقام المذكور في البريد الإلكتروني."
 }
