--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,11 +6,22 @@
   "logInToContinueYourHealthJourney": "Log in to continue your health journey",
   "emailAddress": "Email address",
   "password": "Password",
+  "confirmPassword": "Confirm password",
   "forgotPassword": "Forgot Password?",
   "dontHaveAnAccount": "Don't have an account? ",
   "registerNow": "Register Now",
-  "rememberMe" : "Remember me",
+  "rememberMe": "Remember me",
   "nextTimeYouLogin": "Next time you login, you can use your fingerprint or face ID to access your account.",
   "gotIt": "Got it",
-  "bioMetricAuthEnabled" : "Biometric Authentication Enabled"
+  "bioMetricAuthEnabled": "Biometric Authentication Enabled",
+  "joinHealthifyMe": "Join HealthifyMe and start your journey to a healthier life alue",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "iAgreeToTerms": "I agree to the Terms of Service and Privacy Policy.",
+  "createAccount": "Create Account",
+  "verify": "Verify",
+  "didntGetTheEmail": "Didn't get the email? ",
+  "resendCode": "Resend code",
+  "checkYourEmail": "Check your email",
+  "weSentAnEmail": "We sent you an email with a verification code, please enter the 5 digit code that mentioned in the email"
 }
