-add Custom Drop Down to use in Steps Screen - handle Steps Screen Flow without finish All Ui or All Backend Fecth

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -23,5 +23,6 @@
   "didntGetTheEmail": "لم تتلقَ البريد الإلكتروني؟",
   "resendCode": "إعادة إرسال الرمز",
   "checkYourEmail": "تحقق من بريدك الإلكتروني",
-  "weSentAnEmail": "لقد أرسلنا لك بريدًا إلكترونيًا يحتوي على رمز التحقق، يرجى إدخال الرمز المكون من 5 أرقام المذكور في البريد الإلكتروني."
+  "weSentAnEmail": "لقد أرسلنا لك بريدًا إلكترونيًا يحتوي على رمز التحقق، يرجى إدخال الرمز المكون من 5 أرقام المذكور في البريد الإلكتروني.",
+  "whereAreYouFrom": "Where are you from?"
 }
